--- a/app/src/main/res/drawable/green_ring_background.xml
+++ b/app/src/main/res/drawable/green_ring_background.xml
@@ -3,7 +3,7 @@
     android:shape="oval">
     <stroke
         android:width="1dp"
-        android:color="@color/green"/>
+        android:color="@color/maroon_light_transparent"/>
     <size android:height="16dp"
         android:width="16dp"/>
 </shape>
