--- a/app/src/main/res/drawable/stepper_background_completed.xml
+++ b/app/src/main/res/drawable/stepper_background_completed.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
         <item>
                 <shape android:shape="oval">
-                        <solid android:color="@color/green"/>
+                        <solid android:color="@color/maroon_light_transparent"/>
                 </shape>
         </item>
         <item
