--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -26,6 +26,7 @@
                 android:id="@+id/layoutProfile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/txtSettings"
@@ -50,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:visibility="gone"
                 android:id="@+id/profileUsername"
                 android:gravity="center_horizontal">
                 <ImageView
@@ -127,6 +129,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/settngs_switch_margin"
                         android:layout_marginVertical="12dp"
+                        android:layout_gravity="end|center_vertical"
                         android:weightSum="2"
                         android:background="@drawable/capsule_white_bg"
                         android:gravity="end">
