--- a/app/src/main/res/layout/more_layout_item.xml
+++ b/app/src/main/res/layout/more_layout_item.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,12 +11,14 @@
         android:gravity="center"
 
         android:layout_margin="5dp">
-        <LinearLayout
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+        <androidx.cardview.widget.CardView
+            android:layout_width="105dp"
+            android:layout_height="105dp"
             android:layout_gravity="center"
-            android:background="@drawable/circular_menu_bg"
+            app:cardBackgroundColor="#F5F5F5"
+            app:cardCornerRadius="16dp"
             android:gravity="center"
+            app:cardElevation="3dp"
             >
         <ImageView
             android:id="@+id/imgMoreIcon"
@@ -27,7 +31,7 @@
             android:src="@drawable/ic_help_black"
             android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal" />
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
         <TextView
             style="@style/font_small_bold"
             android:id="@+id/txtMoreName"
@@ -37,11 +41,11 @@
             android:text="text"
             android:maxLines="2"
             android:lines="2"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:singleLine="false"
             android:layout_marginTop="5dp"
             android:textAlignment="center"
-            android:gravity="center_horizontal"/>
+            android:gravity="center_horizontal|center_vertical"/>
     </LinearLayout>
 
 </LinearLayout>
